--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero min-h-[80vh] flex items-center justify-center text-center text-white">
         <div class="px-4 max-w-4xl">
-            <h1 class="text-5xl md:text-7xl font-bold mb-6 text-red-600 dark:text-sky-400">Sabores de España</h1>
+            <h1 class="text-5xl md:text-7xl font-bold mb-6 text-white-600 dark:text-sky-400">Sabores de España</h1>
             <p class="text-xl md:text-2xl mb-8">Welcome to Sabores de España, where we bring the authentic flavors of Spain to your table. Experience the vibrant tastes of paella, tapas, and sangría in our warm, Mediterranean-inspired atmosphere.</p>
             <div class="flex gap-4 justify-center">
                 <a href="#menu" class="btn bg-amber-600 text-white hover:bg-amber-700 px-8">Our Menu</a>
